--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=${PORT:8090}
 server.error.whitelabel.enabled = false
 
 spring.datasource.url = jdbc:mysql://localhost:8060/springDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
