configuracion BD en jawsDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=${PORT:8090}
 server.error.whitelabel.enabled = false
 
-spring.datasource.url = jdbc:mysql://localhost:8060/springDB?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = spring_admin
-spring.datasource.password = adminpass
+spring.datasource.url = jdbc:mysql://qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vl7nzvyf31idwb5j?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username = n3n5k86qt3pn8689
+spring.datasource.password = sraqbfg9cyzvhcic
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
