--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.properties.hibernate,dialect = org.hibernate.dialect.MYSQL5Dialect
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.minimum-idle= 6
 spring.datasource.hikari.maximum-pool-size= 6
-spring.datasource.hikari.max-lifetime= 1000
+spring.datasource.hikari.max-lifetime= 1800000
 spring.datasource.hikari.auto-commit =true
